Bug 825556 - RequestContentRepaint frequency should be possible to limit with some timeout. r=drs